--- a/shop/static/css/style.css
+++ b/shop/static/css/style.css
@@ -161,3 +161,9 @@ button:hover {
     border-radius: 7px;
     transform: scale(1.025);
 }
+
+.quantity_input{
+    background-color: #1a1a1a;
+    color: #f1f1f1;
+    border-radius: 3px;
+}
