--- a/shop/templates/shop/update_cart.html
+++ b/shop/templates/shop/update_cart.html
@@ -36,7 +36,7 @@
                         <td>
                             <form method="post" action="{% url 'update_cart' item.product.pk %}">
                                 {% csrf_token %}
-                                <input type="number" name="quantity" value="{{ item.quantity }}" min="1">
+                                <input type="number" name="quantity" value="{{ item.quantity }}" min="1" class = "quantity_input">
                                 <button type="submit">Update</button>
                             </form>
                         </td>
