--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -48,7 +48,7 @@
         </div>
 
         {% else %}
-            <p class="desc" style="text-align:center;">Your cart is empty. <a href="{% url 'home' %}" class="Back">Go shopping!</a></p>
+            <p class="desc" style="text-align:center;">Your cart is empty. </p> <br> <a href="{% url 'home' %}" class="Back">Go shopping!</a>
         {% endif %}
     </main>
 </body>
