--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -44,7 +44,7 @@
 
         <div class="product-detail" style="text-align:center;">
             <h2>Total: ₹ {{ cart_total }}</h2>
-            <button class="btn-link">Checkout</button>
+            <a class="btn-link">Checkout</a>
         </div>
 
         {% else %}
