--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -45,7 +45,7 @@
         <div class="product-detail" style="text-align:center;">
             <h2>Total: ₹ {{ cart_total }}</h2>
             <a class="btn-link">Checkout</a>
-        </div>
+        </div>vhg
 
         {% else %}
             <p class="desc" style="text-align:center;">Your cart is empty. </p> <br> <a href="{% url 'home' %}" class="Back">Go shopping!</a>
