--- a/shop/static/css/style.css
+++ b/shop/static/css/style.css
@@ -161,7 +161,6 @@ button:hover {
     border-radius: 7px;
     transform: scale(1.025);
 }
-
 .cart-table {
     width: 90%;
     margin: 30px auto;
@@ -185,4 +184,9 @@ button:hover {
     text-align: center;
     font-size: 14px;
     outline: none;
+}
+.quantity_input{
+    background-color: #1a1a1a;
+    color: #f1f1f1;
+    border-radius: 3px;
 }
