--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -26,7 +26,7 @@
         <button type="submit" class="btn-link">Place Order</button>
     </form>
     {% else %}
-    <p>Your cart is empty. <a href="{% url 'home' %}">Go shopping!</a></p>
+    <p>Your cart is empty. <br> <a href="{% url 'home' %}">Go shopping!</a></p>
     {% endif %}
 </main>
 </body>
